--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -18,6 +18,7 @@
 .logo {
   font-weight: bold;
   font-size: 1.5rem;
+  padding-right: 5px;
 }
 
 .nav-links {
